<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.2.0.0" ProductVersion="3.1.4024.9">
  <DUT Name="Device_1_EtherCAT_02E4139D" Id="{ecae927e-011c-0e70-12ab-09d5b7932c47}">
    <Declaration><![CDATA[{attribute addProperty BoxType "IODEVICETYPE_ETHERCATPROT"}
{attribute addProperty Id "Term_1_EK1200Term_1_EK1200_32F8F8302281285.125SyncUnitsSyncUnits_235333EF26032.5InputsInputs_5FC39E3C8010OutputsOutputs_C46FA7B3486InfoDataInfoData_45F98C5022428"}
{attribute addProperty CRC "48501661"}
{attribute addProperty SizeInBites "2893"}
{attribute addProperty SizeInBytes "361.625"}
TYPE Device_1_EtherCAT_02E4139D :
STRUCT
	{attribute addProperty Name "Term_1_EK1200"}
	Term_1_EK1200 : Term_1_EK1200_32F8F830;
	{attribute addProperty Name "SyncUnits"}
	SyncUnits : SyncUnits_235333EF;
	{attribute addProperty Name "Inputs"}
	Inputs : Inputs_5FC39E3C;
	{attribute addProperty Name "Outputs"}
	Outputs : Outputs_C46FA7B3;
	{attribute addProperty Name "InfoData"}
	InfoData : InfoData_45F98C50;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>