<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.2.0.0" ProductVersion="3.1.4024.9">
  <GVL Name="GVL_iXlinker" Id="{5de01bff-938f-01dc-076d-355e2ef9a0d7}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
		Device_1_EtherCAT : Device_1_EtherCAT_75B0F6AE;
		Device_4_EtherCAT : Device_4_EtherCAT_CDFBCD8E;
		Device_2_EtherCAT : Device_2_EtherCAT_09308A23;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>